# opengl-quake

./: README.md  build.ninja  meson.build
src/: Camera.cpp  Camera.h  Map.cpp  Map.h  Quake.cpp  World.cpp  World.h  quake.cpp
src/lib/: retro.h  retrobsp.h  retrocamera.h  retrogl.h  retromain.h  retromath.h
